--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-forge/plugin-webpack": "^7.5.0",
     "@electron/fuses": "^1.8.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "@vue/compiler-sfc": "^3.5.11",
     "css-loader": "^6.11.0",
     "electron": "32.1.2",
     "node-loader": "^2.0.0",
@@ -34,6 +35,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "vue": "^3.5.11",
+    "vue-loader": "^17.4.2",
+    "vue-style-loader": "^4.1.3"
   }
 }
