--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "@vue/compiler-sfc": "^3.5.11",
     "css-loader": "^6.11.0",
     "electron": "32.1.2",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.28.0",
     "node-loader": "^2.0.0",
+    "prettier": "^3.3.3",
     "style-loader": "^3.3.4"
   },
   "keywords": [],
