--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "chokidar": "^4.0.1",
     "electron-squirrel-startup": "^1.0.1",
     "vue": "^3.5.11",
     "vue-loader": "^17.4.2",
