--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "test": "jest"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
@@ -29,6 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
+    "jest": "^29.7.0",
     "node-loader": "^2.0.0",
     "prettier": "^3.3.3",
     "style-loader": "^3.3.4"
