--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "chokidar": "^4.0.1",
     "electron-squirrel-startup": "^1.0.1",
+    "pdf-parse": "^1.1.1",
     "vue": "^3.5.11",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3"
